[project]
name =  "MultiChoiceLib.py"
authors = [
    {name = "cph101", email = "cph101@icloud.com"},
]
description = "Miniscule Python Module for multiple choice menus using arrow keys"
readme = "README.md"
version = 0.0.1

[project.urls]
Documentation = "https://github.com/cph101/MultiChoiceLib.py/tree/main#readme"
Source = "https://github.com/cph101/MultiChoiceLib.py"
Tracker = "https://github.com/cph101/MultiChoiceLib.py/issues"